# malluscript

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml  rust.yml
examples/: armstrong.ms  array.ms  arraysort.ms  factorial.guh  factorial.ms  fibonacci.guh  fibonacci.ms  functions.ms  helloworld.guh  helloworld.ms  mwone.guh  naturaladd.ms  prime.guh  prime.ms  pure_malayalam.ms  reversebits.ms  selectionsort.ms  voting.ms
examples/math_module_test/: main.ms  math.ms
malluscript-wasm/: Cargo.toml
malluscript-wasm/src/: lib.rs
src/: ast.rs  encoding.rs  executor.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop  parser.rs
src/executor/: ast.rs  datatype.rs  error.rs  mod.rs  test.rs
src/lexer/: error.rs  keywords.rs  mod.rs  tokens.rs
src/parser/: grammar.lalrpop  grammar.rs  mod.rs  test.rs
