[package]
name = "malluscript"
version = "0.3.2"
authors = ["SyS <sreyassreelal@gmail.com>"]
edition = "2018"
build = "build.rs" 
description = "Scripting language based on manglish and malayalam memes"

[dependencies]
serde = "1.0.117"
lalrpop-util = "0.20.0"
clap = "2.33"
rustyline = "6.1"

[build-dependencies]
lalrpop = "0.20.0"

[profile.release]
lto = true
