[package]
name = "malluscript"
version = "1.1.0"
authors = ["SyS <sreyassreelal@gmail.com>"]
edition = "2018"
build = "build.rs" 
description = "An esoteric scripting language that lets to write computer programs in Malayalam"

[dependencies]
lalrpop-util = "0.20.0"
clap = "2.33"
rustyline = "6.1"

[build-dependencies]
lalrpop = "0.20.0"

[profile.release]
lto = true
